hphp/hack/test/typecheck/class_meth15.php.exp
File "class_meth15.php", line 4, characters 3-6:
`self` is undefined outside of a class (Typing[4059])
